--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+server.port=${PORT:8080}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://ec2-34-250-16-127.eu-west-1.compute.amazonaws.com:5432/d5mgj16auip8fl
 spring.datasource.username=bgtnzmlsgnoxgw
