--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.lukasz.wolski</groupId>
 	<artifactId>DatingAppBackend</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>DatingAppBackend</name>
 	<description>Server Dating App</description>
 	<properties>
